--- a/css/navigationbar.css
+++ b/css/navigationbar.css
@@ -9,6 +9,7 @@
 	font-size: 2vh;
 	padding: 1vw;
 }
+
 .navigation_a:hover{
 	background-color: #121212;
 	background-color: gray;
@@ -26,21 +27,31 @@
 	padding: 0;
 	display: flex;
 }
-button{
+.navigation_button{
     display: none;
 	}
 
-@media only screen and (max-width : 1350px){
+@media only screen and (max-width : 1450px){
+  .navigation_a{
+	text-decoration: none;
+	color: white;
+	font-family: 'Source Sans Pro', sans-serif;
+	margin: 2 8vm;
+	font-size: 10px;
+	padding: 1vw;
+}
+
+@media only screen and (max-width : 650px){
 	.navigation_ul{
 		flex-direction: column;
 	}
 	
 	.navigation_a{
 		margin: 0;
-		padding: 0,5vw;
+		padding: 0 5vw;
 		display: block;
 	}
-	button{
+	.navigation_button{
     display: block;
 	  color: white;
     
