--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
 .text{
 	color: white;
 	font-family: 'Source Sans Pro', sans-serif;
-	text-indent: 5cm;
+	"""text-indent: 5cm;"""
 	pointer-events: none;
 }
 
@@ -22,28 +22,39 @@ body{
 	font-family: 'Source Sans Pro', sans-serif;
 	color: gray;
 	text-decoration: none;
-	text-indent:10%;
+	"""text-indent:10%;"""
   pointer-events: auto;
 }
 .list{
   list-style-type: none;
   }
+
+.decalage{
+  margin: 0px 215px 0px 215px;
+}
+
 @media only screen and (max-width : 1350px){
 	.text{
 	color: white;
 	font-family: 'Source Sans Pro', sans-serif;
-	text-indent:2cm;
+	"""text-indent:2cm;"""
 	}
 	.text_href{
 	font-family: 'Source Sans Pro', sans-serif;
 	color: gray;
 	text-decoration: none;
-	text-indent:0%;
+	"""text-indent:0%;"""
+}
+  .decalage{
+  margin: 0px;
 }
   
 @media only screen and (max-width : 700px){
 	.text{
 	color: white;
 	font-family: 'Source Sans Pro', sans-serif;
-	text-indent:0%;
+	"""text-indent:0%;"""
 	}
+  .decalage{
+  margin: 0px;
+}
