--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 body {
   background-color: #121212;
-  background-image: url("https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2F1105694.png?v=1614543205341");
+  background-image: url("https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fbbback.png?v=1616863679965");
   background-size: auto;
-  background-position: 0cm 2cm;
+  background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .center {
@@ -20,7 +21,10 @@ body {
 .text {
   color: white;
   font-family: "Source Sans Pro", sans-serif;
-  pointer-events: none;
+}
+
+.no_pointer{
+  pointer-event : none;
 }
 
 .five_stars {
@@ -42,15 +46,33 @@ body {
 .list {
   list-style-type: none;
 }
+
 .decalage {
   margin: 0px 215px 0px 215px;
 }
+
+.decalageplus {
+  margin: 0px 25% 0px 25%;
+}
+
 .twitter-timeline {
   margin: 0px 215px 0px 215px;
 }
 
 .perso {
   display: flex;
+}
+
+aside {
+    width: 40%;
+    padding-left: .5rem;
+    margin-left: .5rem;
+    float: right;
+}
+
+.arme{
+  position: relative;
+  top: -300px;
 }
 
 .image-text {
@@ -61,8 +83,49 @@ body {
   float: left;
 }
 
+.artefact {
+  line-height: 10px;
+  text-align: center;
+  display: block;
+  margin-right: 40px;
+  margin-bottom: 50px;
+  float: left;
+}
+
 .image-text:hover {
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.map-btn{
+  display: flex;
+  font-size: 15px;
+  background-color: #FFFFFF;
+  color: #181818;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  align-self: flex-start;
+  padding: 8px;
+}
+.map-btn:hover{
+  display: flex;
+  font-size: 15px;
+  background-color: #AAAAAA;
+  color: #000000;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  align-self: flex-start;
+  padding: 8px;
+}
+
+.nbrmap{
+  display: block;
+}
+
+.green{
+  color: #3cfa62;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 @media only screen and (max-width: 1350px) {
@@ -78,14 +141,28 @@ body {
   .decalage {
     margin: 0px;
   }
+  .image-text {
+  text-align: center;
+  display: grid;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  float: left;
+  }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 1450px) {
   .text {
     color: white;
     font-family: "Source Sans Pro", sans-serif;
   }
   .decalage {
     margin: 0px;
+  }
+  .image-text {
+  text-align: center;
+  display: grid;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  float: left;
   }
 }
